[gd_scene load_steps=9 format=3 uid="uid://dgmarwjxcvefi"]

[ext_resource type="Texture2D" uid="uid://cxr7mau7basoa" path="res://assets/art/ui/flags/flag-selection.png" id="1_4ssld"]
[ext_resource type="Script" uid="uid://bqs2k6aky1yoo" path="res://Scences/UI/flag_selector.gd" id="1_ypqu7"]
[ext_resource type="Texture2D" uid="uid://c5ofqps0aoi5r" path="res://assets/art/props/1p.png" id="2_7xu6m"]
[ext_resource type="Texture2D" uid="uid://cvn54bcwg6x44" path="res://assets/art/props/2p.png" id="3_cpy0c"]

[sub_resource type="Animation" id="Animation_cpy0c"]
resource_name = "selecting"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ypqu7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mvepe"]
resource_name = "selected"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ypqu7"]
_data = {
&"RESET": SubResource("Animation_ypqu7"),
&"selected": SubResource("Animation_mvepe"),
&"selecting": SubResource("Animation_cpy0c")
}

[node name="FlagSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ypqu7")

[node name="Border" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 46.0
offset_bottom = 30.0
texture = ExtResource("1_4ssld")

[node name="indicator1p" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = -4.0
offset_top = -18.0
offset_right = 11.0
offset_bottom = -7.0
scale = Vector2(2, 2)
texture = ExtResource("2_7xu6m")

[node name="indicator2p" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 18.0
offset_top = -18.0
offset_right = 33.0
offset_bottom = -7.0
scale = Vector2(2, 2)
texture = ExtResource("3_cpy0c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ypqu7")
}
autoplay = "selecting"
